<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NSA Away</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_encryption_button">Encrypt a Message</string>
    <string name="start_decryption_button">Decrypt a Message</string>
    <string name="button_start_complex_ocr"> OCR an encrypted message</string>
    <string name="complex_ocr_continue_button">Continue</string>
        
    <string name="start_key_management_button">Key Management</string>
    <string name="create_test_keys_button">Create Test Keys</string>
    <string name="enter_plaintext">Enter your plain text message:</string>
    <string name="choose_a_key_button">Pick a key</string>
    <string name="encrypt_button">Encrypt</string>
    <string name="list_keys_button">List Keys</string>
    <string name="bytes_remaining">Bytes remaining:</string>
    <string name="choose_an_encryption_key_header">Choose a key to encrypt the message</string>
    <string name="display_ciphertext_header">Your encrypted message is shown below:</string>
    <string name="send_as_keystrokes_button">Send this message as keystrokes</string>
    <string name="encrypt_with_key_button">Encrypt the message with this key</string>

    <string name="add_a_key_button">Add a key</string>
    <string name="create_a_key_button">Create a key</string>
    <string name="create_new_key_button">Create this key</string>
    <string name="new_key_name_label_text">Key name:</string>
    <string name="new_key_size_label_text">Key size (bytes):</string>
    <string name="new_key_seed_label_text">Key seed (optional):</string>
    <string name="new_key_offset_label_text">Key starting offset (optional):</string>
    <string name="new_key_header_text">Enter the appropriate values for creating a new encryption key.  Keys created this way are not secure and should be used for testing only.</string>
    <string name="error_creating_key_message">There was an error creating the key</string>
    <string name="new_key_created_message">The key has been created</string>
    
    <string name="button_encrypt_text">Encrypt This Message</string>
    <string name="button_decrypt_text">Decrypt This Message</string>

    <string name="button_simple_ocr_text">OCR</string>
    <string name="text_ocr_lable">OCRed Text will appear here</string>

    <string name="button_start_ocr">Simple OCR an encrypted message (experimental)</string>
    
    <string name="title_choose_a_key">Choose a Key</string>

    <string name="title_display_plaintext">The decrypted message</string>
    
    <string name="title_enter_ciphertext">Enter your encrypted message</string>
    <string name="title_key_name">Encryption key:</string>
    
    
    <string name="pref_key_dir">Key Directory</string>
    <string name="pref_key_dir_summary">The directory that contains your keys</string>
    <string name="pref_key_dir_default">/storage/emulated/0/Android/data/org.sector67.nsaaway/files</string>

    <string name="pref_key_eraser">Key Eraser</string>
    <string name="pref_key_eraser_summary">Choose the strategy for erasing used keys</string>
    <string name="pref_key_eraser_default">org.sector67.otp.key.MultiPassZeroingEraser</string>

    <string name="pref_major_chunk_size">Major chunk size in bytes</string>
    <string name="pref_major_chunk_size_summary">How many bytes in one major chunk of output</string>
    <string name="pref_major_chunk_size_default">12</string>

    <string name="pref_minor_chunk_size">Minor chunk size in bytes</string>
    <string name="pref_minor_chunk_size_summary">How many bytes in one minor chunk of output</string>
    <string name="pref_minor_chunk_size_default">1</string>

    <string name="pref_major_chunk_separator">Major chunk separator</string>
    <string name="pref_major_chunk_separator_summary">The string used to separate major chunks</string>
    <string name="pref_major_chunk_separator_default">\n</string>    

    <string name="pref_minor_chunk_separator">Minor chunk separator</string>
    <string name="pref_minor_chunk_separator_summary">The string used to separate minor chunks</string>
    <string name="pref_minor_chunk_separator_default">  </string>

    <string name="message_test_keys_created">The test keys have been created</string>
    <string name="title_test_keys_creation_error">Test Key Creation Error</string>
    <string name="message_test_keys_creation_error">An error occurred while creating test keys</string>

    <string name="title_key_list">Key List</string>
    <string name="title_key_list_error">Key List Error</string>
    <string name="message_key_list_error">An error occurred while listing keys</string>

    <string name="label_enter_key_offset">Manually enter the key offset for this message:</string>
    <string name="button_copy_to_clipboard">Copy to clipboard</string>
    <string name="message_copied_to_clipboard">Your message has been copied to the clipboard</string>
    

    <string name="button_paste_from_clipboard">Paste from clipboard</string>
    
    

    <string name="message_key_bytes_erased">The key bytes used have been erased.</string>
    <string name="button_erase_key_and_continue">Erase the key used and continue</string>
    <string name="error_erasing_key_bytes">Erase the key used and continue</string>
    <string name="error_encrypting_message">There was an error encrypting the message</string>
    
    <string name="pref_default_encrypt_key_name">Default encryption key name</string>
    <string name="pref_default_encrypt_key_name_summary">The name of the key to use by default for encryption</string>
    <string name="pref_default_encrypt_key_name_value">encrypt-key</string>
    <string name="pref_default_decrypt_key_name">Default decryption key name</string>
    <string name="pref_default_decrypt_key_name_summary">The name of the key to use by default for decryption</string>
    <string name="pref_default_decrypt_key_name_value">decrypt-key</string>

    
</resources>
