<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/ciphertextHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_ciphertext_header" />

    <TextView
        android:id="@+id/ciphertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="A0 D5 12 58 C4 F9 5C"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/sendAsKeystrokesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/send_as_keystrokes_button" />

    <Button
        android:id="@+id/copyToKeyboardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/button_copy_to_clipboard" />

    
    <Button
        android:id="@+id/eraseKeyAndContinueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/button_erase_key_and_continue" />
    
</LinearLayout>
