<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_enter_ciphertext" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/keyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_key_name" />

        <TextView
            android:id="@+id/keyNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <EditText
        android:id="@+id/ciphertextEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/chooseKeyForDecryptionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/choose_a_key_button" />

    <Button
        android:id="@+id/decryptTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_decrypt_text" />

</LinearLayout>
