<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="org.sector67.nsaaway.MainActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/chooseKeyForEncryptionButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/start_encryption_button" />

    <Button
        android:id="@+id/startDecryptionButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chooseKeyForEncryptionButton"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/start_decryption_button" />

    <Button
        android:id="@+id/startOCRButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startDecryptionButton"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/button_start_ocr" />
    
    <Button
        android:id="@+id/startKeyManagementButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startOCRButton"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/start_key_management_button" />

</RelativeLayout>
